# navitel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/analytics-engine/: Cargo.toml
crates/audio-router/: Cargo.toml
crates/latency-tracker/: Cargo.toml
crates/metrics-collector/: Cargo.toml
crates/rtp-ingest/: Cargo.toml
crates/rtp-ingest/src/: main.rs  rtp_receiver.rs  stream_manager.rs
crates/rtp-test-sender/: Cargo.toml
crates/rtp-test-sender/src/: main.rs  rtp_sender.rs  test_audio.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: audio.rs  latency.rs  lib.rs  stream.rs
crates/stt-processor/: Cargo.toml
crates/websocket-api/: Cargo.toml
