[workspace]
resolver = "2"
members = [
    "crates/rtp-ingest",
    "crates/audio-router",
    "crates/stt-processor",
    "crates/analytics-engine",
    "crates/metrics-collector",
    "crates/websocket-api",
    "crates/shared-types",
    "crates/latency-tracker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ed Sweeney"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.9"
futures = "0.3"
async-trait = "0.1"

# RTP/Audio specific
webrtc-media = "0.8"
rtp = "0.13"
opus = "0.3"
hound = "3.5"

# Networking
axum = "0.8"
tonic = "0.13"
prost = "0.13"

# Observability
prometheus = "0.13"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"

# Message passing
flume = "0.11"
# Using Valkey (Redis fork) or DragonFly - both BSD-3
valkey-rs = { version = "0.27", features = ["tokio-comp", "streams"] }
# Alternative: NATS (Apache 2.0) for streaming
async-nats = "0.38"
