[package]
name = "shared-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "shared_types"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bytes = { workspace = true, features = ["serde"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
